--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "site",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "mode server.js"
+    "dev": "node server.js",
+    "start": "node server.js",
+    "next:dev": "next dev",
+    "next:build": "next build",
+    "next:start": "next start"
   },
   "keywords": [],
   "author": "",
@@ -14,8 +17,8 @@
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
     "express": "^5.1.0",
-    "next": "^16.0.5",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
