--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "@vercel/analytics": "^1.5.0"
   }
 }
-
