--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "dev": "node server.js",
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^5.1.0",
+    "express": "^5.1.0"
   }
 }
